--- a/index.html
+++ b/index.html
@@ -118,5 +118,63 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="footer-title">
+                <img src="/assets/icons/logo.svg" alt="logo">
+                <span></span>
+            </div>
+            <div class="footer-content">
+                <div class="footer-reach-company">
+                    <div class="footer-reach">
+                        <h3>Reach us</h3>
+                        <div class="footer-contact-us">
+                            <a href="tel:+380979715860" class="footer-contact">
+                                <img src="/assets/icons/phone.svg" alt="phone icon">
+                                <p>+38 (097) 971-58-60</p>
+                            </a>
+                            <a href="mailto:julia.bogolub@gmail.com" class="footer-contact">
+                                <img src="/assets/icons/mail.svg" alt="mail icon">
+                                <p>julia.bogolub@gmail.com</p>
+                            </a>
+                            <a href="https://maps.app.goo.gl/p5JrVvzfyXd615Wn8" class="footer-contact" target="_blank">
+                                <img src="/assets/icons/location.svg" alt="location icon">
+                                <p>Nemyrivske highway, 94E, Vinnytsia, Vinnytsia region, 21006</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-name-column">Company</h3>
+                        <a href="/">About</a>
+                        <a href="/">Contact</a>
+                        <a href="/">Blogs</a>
+                    </div>
+                </div>
+                <div class="footer-legal-links">
+                    <div class="footer-column">
+                        <h3 class="footer-name-column">Legal</h3>
+                        <a href="/">Privacy Policy</a>
+                        <a href="/">Terms &amp; Services</a>
+                        <a href="/">Terms of Use</a>
+                        <a href="/">Refund Policy</a>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-name-column">Quick Links</h3>
+                        <a href="/">Techlabz Keybox</a>
+                        <a href="/">Downloads</a>
+                        <a href="/">Forum</a>
+                    </div>
+                </div>
+                <div class="footer-newsletter">
+                    <label for="newsletter">Join Our Newsletter</label>
+                    <div class="footer-input-button">
+                        <input type="email" placeholder="Your email address">
+                        <button>Subscribe</button>
+                    </div>
+                    <span>*  Will send you weekly updates for your better tool management.</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
